column color shade in q4

--- a/WD/Assignment1/q4.html
+++ b/WD/Assignment1/q4.html
@@ -16,6 +16,19 @@
     <table border="1">
         <!-- 14 rows with 10 columns -->
         <tbody align="center">
+            <colgroup>
+                <!-- Go darker for right -->
+                <col span="1" style="background-color:#fad8cc">
+                <col span="1" style="background-color:#f8a083">
+                <col span="1" style="background-color:#ff8258">
+                <col span="1" style="background-color:#f86f42">
+                <col span="1" style="background-color:#f65621">
+                <col span="1" style="background-color:#fb6634">
+                <col span="1" style="background-color:#fc561e">
+                <col span="1" style="background-color:#f84509">
+                <col span="1" style="background-color:#c23000">
+                <col span="1" style="background-color:#792306">
+            </colgroup>
             <tr>
                 <th colspan="2"><img src="qr.png" height="100" ></th>
                 <th colspan="8"><h1>Time Table Semester 1</h1></th>
